--- a/ExhibitionCurationPlatform/ExhibitionCurationPlatform/Components/Pages/Home.razor
+++ b/ExhibitionCurationPlatform/ExhibitionCurationPlatform/Components/Pages/Home.razor
@@ -1,12 +1,13 @@
-﻿
-@page "/"
-@rendermode InteractiveServer
+﻿@page "/"
 @using ExhibitionCurationPlatform.Models
 @using ExhibitionCurationPlatform.Services.Interfaces
+@using ExhibitionCurationPlatform.Components.UI
+@rendermode InteractiveServer
 @inject IArtCollectionService ArtCollectionService
 
-
 <PageTitle>Home</PageTitle>
+
+<ArtSearchBar OnSearch="@UpdateQuery" />
 
 @if (isLoading)
 {
@@ -18,30 +19,22 @@ else if (artworks.Count == 0)
 }
 else
 {
-    <div>
-        <div class="row row-cols-1 row-cols-md-3 g-4">
-            @foreach (var artwork in artworks)
-            {
-                <div class="col">
-                    <div class="card h-100">
-                        <img src="@artwork.ImageUrl" class="card-img-top" alt="@artwork.Title" />
-                        <div class="card-body">
-                            <h5 class="card-title">@artwork.Title</h5>
-                            <p class="card-text">TODO: insert a description here</p>
-                            <span class="badge bg-secondary">@artwork.Source</span>
-                        </div>
-                    </div>
-                </div>
-            }
-        </div>
-
-        <div class="mt-4 d-flex justify-content-center">
-            <button class="btn btn-outline-primary me-2" @onclick="PreviousPage" disabled="@(!CanGoBack)">Previous</button>
-            <span>Page @currentPage of @totalPages</span>
-            <button class="btn btn-outline-primary ms-2" @onclick="NextPage" disabled="@(!CanGoForward)">Next</button>
-
-        </div>
+    <div class="row row-cols-1 row-cols-md-3 g-4">
+        @foreach (var artwork in artworks)
+        {
+            <div class="col">
+                <ArtworkCard Artwork="@artwork" />
+            </div>
+        }
     </div>
+
+    <ArtPaginationControls
+        CurrentPage="@currentPage"
+        TotalPages="@totalPages"
+        CanGoBack="@CanGoBack"
+        CanGoForward="@CanGoForward"
+        Previous="@PreviousPage"
+        Next="@NextPage" />
 }
 
 @code {
@@ -54,34 +47,27 @@ else
     private int totalCount;
     private int totalPages => (int)Math.Ceiling((double)totalCount / pageSize);
 
-    protected override async Task OnInitializedAsync()
-    {
-
-        await LoadPage(currentPage);
-    }
+    protected override async Task OnInitializedAsync() => await LoadPage(currentPage);
 
     private async Task LoadPage(int page)
     {
         isLoading = true;
-        var result = await ArtCollectionService.SearchAsync(query, page, pageSize);
+        var result = await ArtCollectionService.SearchAsync(query, page, pageSize, null, null);
         artworks = result.Items;
         totalCount = result.TotalCount;
         currentPage = page;
         isLoading = false;
     }
-
-    private async Task PreviousPage()
+    private async Task UpdateQuery(string newQuery)
     {
-        if (currentPage > 1)
-            await LoadPage(currentPage - 1);
+        query = newQuery;
+        await LoadPage(1);
     }
 
-    private async Task NextPage()
-    {
-        if ((currentPage * pageSize) < totalCount)
-            await LoadPage(currentPage + 1);
-    }
+
+    private async Task PreviousPage() => await LoadPage(currentPage - 1);
+    private async Task NextPage() => await LoadPage(currentPage + 1);
 
     private bool CanGoBack => currentPage > 1;
-    private bool CanGoForward => (currentPage * pageSize) < totalCount;
+    private bool CanGoForward => currentPage < totalPages;
 }
