--- a/ExhibitionCurationPlatform/ExhibitionCurationPlatform/Components/Pages/UserArtwork.razor
+++ b/ExhibitionCurationPlatform/ExhibitionCurationPlatform/Components/Pages/UserArtwork.razor
@@ -5,7 +5,7 @@
 @inject IArtworkService ArtworkService
 @inject IExhibitionService ExhibitionService
 
-<h3>Your Artworks</h3>
+<PageTitle>Your Artworks</PageTitle>
 
 @if (artworks == null)
 {
