--- a/ExhibitionCurationPlatform/ExhibitionCurationPlatform/Components/Pages/ViewUserExhibitions.razor
+++ b/ExhibitionCurationPlatform/ExhibitionCurationPlatform/Components/Pages/ViewUserExhibitions.razor
@@ -3,7 +3,7 @@
 @using ExhibitionCurationPlatform.Services.Interfaces
 @inject IExhibitionService ExhibitionService
 
-<h3>Your Exhibitions</h3>
+<PageTitle>Your Exhibitions</PageTitle>
 
 @if (exhibitions == null)
 {
