--- a/ExhibitionCurationPlatform/ExhibitionCurationPlatform/Components/Layout/MainLayout.razor
+++ b/ExhibitionCurationPlatform/ExhibitionCurationPlatform/Components/Layout/MainLayout.razor
@@ -3,35 +3,58 @@
 <div class="app-container">
     <header class="app-header">
         <h1>Exhibition Curation Platform</h1>
-        <nav class="navbar navbar-expand-lg bg-body-tertiary">
+        <nav class="navbar navbar-expand-lg navbar-light bg-light">
             <div class="container-fluid">
-                <a class="navbar-brand" href="#">Navbar</a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                <NavLink class="navbar-brand" href="/">Exhibition Curation</NavLink>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                        data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
+                        aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
+
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                        <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="#">Home</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#">Link</a>
-                        </li>
+
                         <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                                Dropdown
+                            <a class="nav-link dropdown-toggle" href="#" id="exhibitionsDropdown" role="button"
+                               data-bs-toggle="dropdown" aria-expanded="false">
+                                Exhibitions
                             </a>
-                            <ul class="dropdown-menu">
-                                <li><a class="dropdown-item" href="#">Action</a></li>
-                                <li><a class="dropdown-item" href="#">Another action</a></li>
-                                <li><hr class="dropdown-divider"></li>
-                                <li><a class="dropdown-item" href="#">Something else here</a></li>
+                            <ul class="dropdown-menu" aria-labelledby="exhibitionsDropdown">
+                                <li>
+                                    <NavLink class="dropdown-item" href="/exhibitions" activeClass="active">
+                                        View Exhibitions
+                                    </NavLink>
+                                </li>
+                                <li>
+                                    <NavLink class="dropdown-item" href="/exhibitions/create" activeClass="active">
+                                        Create Exhibition
+                                    </NavLink>
+                                </li>
                             </ul>
                         </li>
-                        <li class="nav-item">
-                            <a class="nav-link disabled" aria-disabled="true">Disabled</a>
+
+                        <li class="nav-item dropdown">
+                            <a class="nav-link dropdown-toggle" href="#" id="artworks Dropdown" role="button"
+                               data-bs-toggle="dropdown" aria-expanded="false">
+                                Artworks
+                            </a>
+                            <ul class="dropdown-menu" aria-labelledby="artworks Dropdown">
+                                <li>
+                                    <NavLink class="dropdown-item" href="/my-artworks" activeClass="active">
+                                        My Artworks
+                                    </NavLink>
+                                </li>
+                                <li>
+                                    <NavLink class="dropdown-item" href="/my-artwork/create" activeClass="active">
+                                        Add Artwork
+                                    </NavLink>
+                                </li>
+                            </ul>
                         </li>
+
                     </ul>
+
                     <form class="d-flex" role="search">
                         <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search" />
                         <button class="btn btn-outline-success" type="submit">Search</button>
