--- a/ExhibitionCurationPlatform/ExhibitionCurationPlatform/Components/UI/ArtworkCard.razor
+++ b/ExhibitionCurationPlatform/ExhibitionCurationPlatform/Components/UI/ArtworkCard.razor
@@ -3,9 +3,9 @@
 <div class="card h-100">
     <img src="@Artwork.ImageUrl" class="card-img-top" alt="@Artwork.Title" />
     <div class="card-body">
-        <h5 class="card-title">@Artwork.Title</h5>
-        <p class="card-text">Create a description to place here</p>
-        <span class="badge bg-secondary">@Artwork.Source</span>
+        <div class="card-title h5" aria-label="Title">@Artwork.Title</div>
+        <p class="card-text" aria-label="Description">Create a description to place here</p>
+        <span class="badge bg-secondary" aria-label="Source of Artwork ">@Artwork.Source</span>
     </div>
 </div>
 
