--- a/ExhibitionCurationPlatform/ExhibitionCurationPlatform/Components/Pages/Home.razor
+++ b/ExhibitionCurationPlatform/ExhibitionCurationPlatform/Components/Pages/Home.razor
@@ -19,7 +19,7 @@ else if (artworks.Count == 0)
 }
 else
 {
-    <div class="row row-cols-1 row-cols-md-3 g-4">
+    <div class="row row-cols-1 row-cols-lg-2 row-cols-xxl-3 g-4">
         @foreach (var artwork in artworks)
         {
             <div class="col">
