--- a/ExhibitionCurationPlatform/ExhibitionCurationPlatform/Components/Pages/ViewUserExhibitions.razor
+++ b/ExhibitionCurationPlatform/ExhibitionCurationPlatform/Components/Pages/ViewUserExhibitions.razor
@@ -1,4 +1,5 @@
 ﻿@page "/exhibitions"
+@using ExhibitionCurationPlatform.Components.UI
 @using ExhibitionCurationPlatform.Models
 @using ExhibitionCurationPlatform.Services.Interfaces
 @inject IExhibitionService ExhibitionService
@@ -29,23 +30,11 @@ else
 
                 @if (exhibition.Artworks?.Any() == true)
                 {
-                    <div class="artwork-list row row-cols-1 row-cols-md-2 g-3">
+                    <div class="artwork-list row row-cols-1 row-cols-lg-2 row-cols-xxl-3 g-3">
                         @foreach (var artwork in exhibition.Artworks)
                         {
                             <div class="col">
-                                <div class="card h-100">
-                                    <img src="@artwork.ImageUrl" class="card-img-top" alt="@artwork.Title" style="object-fit: cover; height: 200px;" />
-                                    <div class="card-body">
-                                        <h5 class="card-title">@artwork.Title</h5>
-                                        <p class="card-text">
-                                            <strong>Artist:</strong> @artwork.Artist<br />
-                                            <strong>Date:</strong> @artwork.Date
-                                        </p>
-                                        <a class="btn btn-sm btn-primary" href="@($"/artwork/{artwork.Source.ToLower()}/{artwork.Id}")">
-                                            View Details
-                                        </a>
-                                    </div>
-                                </div>
+                               <ArtworkCard Artwork="artwork" />
                             </div>
                         }
                     </div>
