--- a/ExhibitionCurationPlatform/ExhibitionCurationPlatform/Components/Pages/Home.razor
+++ b/ExhibitionCurationPlatform/ExhibitionCurationPlatform/Components/Pages/Home.razor
@@ -73,4 +73,10 @@ else
 
     private bool CanGoBack => currentPage > 1;
     private bool CanGoForward => currentPage < totalPages;
+
+    private void test()
+    {
+        isLoading = true;
+    }
+
 }
