Add delete button

--- a/ExhibitionCurationPlatform/ExhibitionCurationPlatform/Components/Pages/UserArtwork.razor
+++ b/ExhibitionCurationPlatform/ExhibitionCurationPlatform/Components/Pages/UserArtwork.razor
@@ -19,7 +19,7 @@
 }
 else if (!artworks.Any())
 {
-    <div class="alert alert-info">You haven't added any artworks yet.</div>
+    <div class="alert alert-warning">You haven't added any artworks yet.</div>
 }
 else
 {
